[gd_scene load_steps=3 format=3 uid="uid://qietj2sv431v"]

[ext_resource type="Theme" uid="uid://mujigvckefq3" path="res://main_theme.tres" id="1_0ma8g"]
[ext_resource type="Script" path="res://splash_screen.gd" id="1_rtm0r"]

[node name="SplashScreen" type="Node2D"]
script = ExtResource("1_rtm0r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -41.5
offset_right = 180.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0ma8g")

[node name="SplashText" type="Label" parent="CanvasLayer/MarginContainer"]
offset_left = 180.0
offset_top = 8.0
offset_right = 180.0
offset_bottom = 136.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 128
text = "RRGGJ2022"
visible_characters = 0
visible_ratio = 0.0

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="TransitionTimer" type="Timer" parent="."]
one_shot = true
